# ChangeLog for app-portage/cfg-update
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/cfg-update/ChangeLog,v 1.40 2014/10/13 01:02:00 rich0 Exp $

  13 Oct 2014; Richard Freeman <rich0@gentoo.org> -cfg-update-1.8.8.ebuild:
  No longer works after bash security fixes.

  06 Oct 2014; Richard Freeman <rich0@gentoo.org> cfg-update-1.8.9.ebuild:
  EAPI bump, amd64 stable fast-track due to shellshock-related bug in current
  stable.

*cfg-update-1.8.9 (30 Sep 2014)

  30 Sep 2014; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.9.ebuild:
  Shellshock fix - 524092 - thanks to Christer Ekholm for patch.

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -cfg-update-1.8.2-r1.ebuild:
  drop old

*cfg-update-1.8.8 (22 Mar 2014)

  22 Mar 2014; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.8.ebuild:
  New release - remove need to modify .bashrc

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> cfg-update-1.8.2-r1.ebuild,
  cfg-update-1.8.7.ebuild:
  Drop sparc keywords

  01 Feb 2012; Brent Baude <ranger@gentoo.org> cfg-update-1.8.7.ebuild:
  Marking cfg-update-1.8.7 ppc for bug 394347

  26 Dec 2011; Markus Meier <maekke@gentoo.org> cfg-update-1.8.7.ebuild:
  x86 stable, bug #394347

  11 Dec 2011; Richard Freeman <rich0@gentoo.org> cfg-update-1.8.7.ebuild:
  amd64 stable

  05 Dec 2011; Richard Freeman <rich0@gentoo.org> -cfg-update-1.8.0-r6.ebuild,
  -cfg-update-1.8.2-r2.ebuild, -cfg-update-1.8.4.ebuild,
  -cfg-update-1.8.5.ebuild, -cfg-update-1.8.6.ebuild:
  Clean up old versions in preparation for stabilization.

*cfg-update-1.8.7 (12 Nov 2011)

  12 Nov 2011; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.7.ebuild:
  Bump - fix for bug involving early file replacement.

*cfg-update-1.8.6 (29 Oct 2011)

  29 Oct 2011; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.6.ebuild:
  bump

*cfg-update-1.8.5 (15 Oct 2011)

  15 Oct 2011; Richard Freeman <rich0@gentoo.org> +cfg-update-1.8.5.ebuild: