@@ -4,18 +4,16 @@ Hash: SHA256
 AUX python-iptables-0.2.0-tests.patch 554 SHA256 cbeb876d17cce55d792d4e36a8072d7e48e78e762454e2fe835b6ab08b76fc01 SHA512 14b7b70af8832a040b34536538ba6c59e297af8044fc57f2a08984b2faf2e5204de881dfc4fda63c1b0f376f1b1bcaf9dda41fd3d1ff9fc88048109714babfd4 WHIRLPOOL 7bc72953776030ec49a18aa2691aaa96adda9c0334b8820b58d23575288e586219469887ea4641568aa09d988045a67ce1f5d04cfe32e14a74f4621ce8f45ff6
 AUX python-iptables-0.3.0-conntrack-fixes.patch 6471 SHA256 fd6cd7e18576940cfbcfdeff3b1cfd3b1fd4c8177e6378f80ea5a474f22bb305 SHA512 730a7865fcc80c1d2e459215cf03123f8893372123cee63aeb0a587e174571ef8e8dee18d829b98265b0fb8fc05425109517c568ebf3d8f2924c9786306419f3 WHIRLPOOL 59997e3f8c56fdda9bf14aa55ca3555ec900cd2a29bad20dfa8280ed67847f3004615fd589b061b1db7e03b04ead4f71c2985833b2d8d2adbdc729e76e511355
 AUX python-iptables-fix-ctypes.patch 2422 SHA256 5b14d4de65aa815604129119c32d4d24f31baf1f0cb0601553afd2e47e2b9803 SHA512 ea4d3d0435154f566857fda5bd9ceed888b3fdcfc63f3d41ef6dcd810348f788945fdba63e4193a71291266f42783f39ead4682a4e3cbb75077ded4ed665b555 WHIRLPOOL abe2c58d23d51c0f6d6ff329bb30bb4416b157b5138324e1284960d605408b01d72ac21b62d0fc3e386104b60d1d59028b8f1825f8e8da9dd7d09583bf7b9717
-DIST python-iptables-0.3.0.tar.gz 46921 SHA256 e609e150754c70220ece63c43dd763afe383a33d0d7dce35d63612c252c8f701 SHA512 423d1c2b33561410e514633fd18f0b8e6ed4f21f869072cbde58b011c46c825fcc005e8da21bb3a8c3c9ec812a5f37bd246dc1fc0d86884df43264122f7efc63 WHIRLPOOL 6fec86c7bc87334b4fa14672b0d64323bbc3a81448771fa6277ec6578671eae095ef3b2960def40f39c43a0e74e26895042ac806415d32592564a44115e2ef04
-DIST python-iptables-0.3.0_p20130331.tar.xz 37324 SHA256 c7bbd1444d3052df9cc9ebd4847f4c9591049d4b81a28d6a7a9a948778eaa0d6 SHA512 4fae77ad670004029a72024e9b6d46e15c615750913c124bc03bed4c70916e248025e9586b25f0dd99085edb47dc622432b9919880a3845d9e53eda0811864ab WHIRLPOOL 570b4fc0d13a4114d1cc7b1c05b3da96bea32cd7d5012b64c32ab932671c6bafa202c6d9b5b463a1d9314744c966ca0d08000866ef79065505dc7172abdec8a3
 DIST python-iptables-0.4.0.tar.gz 35824 SHA256 f1ca24c041f90d89a2d21ec7657b8d45729d18e80033602726679030eb6472f2 SHA512 9055d7e637938ef6e0def0a84e7cac67ffbbdaf7584b413b86e6a879c3aed62814defe647d8f911dc74d8573c7bfa0e7ddb034498d7992e2b5b42a1018c00b70 WHIRLPOOL 7436e6868fd2bd8ff1ce2526f4e1b5c0ff6da9c1d83f496d9ae434844c9149cc9e749b8ed81cb76f25b527cd809656ffcf31a9fef9c848cc39d8879549c05ad8
-EBUILD python-iptables-0.3.0-r3.ebuild 862 SHA256 e94e4a4a80740a1cc7bb579b99b31e0a5e41f75f20bb5b8fd7b250bcd9331739 SHA512 9d964fe176705c7152d14884f575d5c4c05ef9c40fd4878fbced8a0f324dce1266c3997ad4610829688d8fcd63055a3c6dde7ba4e43f022b05768520ed66b79c WHIRLPOOL d2fda1b297eb477a739d9eb1424f00b078e1cfe4071a01f1ca2021fe85cd71b3139d6be544427fa26ed08234a68c818c0474e362ff37c986129b89d0f01e262e
-EBUILD python-iptables-0.3.0_p20130331.ebuild 874 SHA256 03823676c871ee228ccf0c22545f06eafc8a300f08fcc9caba1dd7315dbb6e46 SHA512 af3944f3f503e5a019a4ebe769bf2791d0e7869d941a9f85b27460f6214cbfa0baabdb61ba347c8b40767aefafc90aeaec64b34a2542e476fd9723ca50453eb5 WHIRLPOOL 032383511ad7c3cf25b356279c219ff2ddf743f1dacdd7677eefa91eead4e7e8cf02793878c1c2f21dd4b79b3e80e52f1790c1cbdb406286904b4059d6e73f2e
+DIST python-iptables-0.5.0.tar.gz 69731 SHA256 aef04b9bf1b7cd0f846db4a5ba2e4539f4e42c6090563032abe6d3eea5af4e63 SHA512 1f836ca1a2477e1949e0fc06e3b27867105d7a0296709621708a6bdbb5448304c900c209da33ac2000d09d110cdbd091ff7b74857c1880348fb1347f30cc4232 WHIRLPOOL 4b864527439dfceee5db8297207465190f15b7bbf5360ec3be4f17279a4b02510be81e9f0570b5553757981e8b6914c242518a020abbf7015017f35a986b2b63
 EBUILD python-iptables-0.4.0.ebuild 801 SHA256 c7ae0a9daca56a474b5521ba0c6fd63d47f9b79490652037e4a0b8ce1fb0b0e1 SHA512 c3a558333ba1bd5402a492b558b9bc5fa1f0320d64758f36b84142f222554c103df4d30389d6cc07435212850fef009b6820f5469344cfeeb17f683f6b0a7e91 WHIRLPOOL f4c576b5ced2370dbc06a3d8321f112ae877e03bf85025cffc71805f9a4473b9d254a9579513e947b56f959b0ac92ddc0fa38ebedbfbf4627e6c523541bb03f9
-MISC ChangeLog 2062 SHA256 d245dcda05f04abf5d03fc60190d93c3aab0c8791c311c026d1834c1752ee638 SHA512 3902551f500cf8407d9857c39053e11500fac8118a2a3b08f3d26397a0e6aa9a456ac363bb3780a806c842604e8d3b49e20e384418a2c420a9cc0df2dbd8a9f1 WHIRLPOOL 310d640f611f86c70993b1d1777cb949738c228fb7f2ae578d16d1f26ff5da93ace1c7758e1d1e7ef6abae3221b6fe0f88d6f352a99c7294dfada65078d5c913
+EBUILD python-iptables-0.5.0.ebuild 1105 SHA256 8729a88563b0079fef96410328eb90ab7fc2cd64adbc970c36a3117627a16e1e SHA512 0959370dea49976bfbfedbfbb1059eb8b4dd20c2f994af3635966ddf9de5e0bc3b9e8120e33d6eb5cc2f6cdbe50a66b327fdac794489e842f0c59e9729d2e3d7 WHIRLPOOL f2b9e946092a751579339af39b67b0b9cc22076c1f3546ecfaddb199b8547a0ccc6c8cc58307a417c03bfaa1805aed685d1ca484f0d90d46d0c2e3ccbf8ac4c1
+MISC ChangeLog 2399 SHA256 42439fafcab69c96f03e7d53f233acddd57b72633f4ba586990953291f89c56c SHA512 97f1d126a442ff46a3e2249be913f72b60d36cff7ec4e537e841a88bcad479c1b5acc728fe59194ed585aa2220b23c538dc098b29d0480272cfc16762c25387c WHIRLPOOL 0d86c9031dfe07561756ced6d2f338f6154bd2038ba0b1efd22fcc3f2b50fb5e5ef996adde1bba4832c42776a7b8d9884dc92cd0cd7a44f12a666d7e5a56483e
 MISC metadata.xml 1123 SHA256 c2d1079ccb342bf16517e24efd2f8a4dd32434d63c538ddb9c516631720e5fb0 SHA512 8313aba8a2095a301238d9be0095a193910262d32168ccdf89e115d9a6691d234a0ed0a7115f4c7aa68a30dde3500052ca9cd4d05fd749a37491fde6732aabea WHIRLPOOL b5daada03b37ece818e561d8502d1989920259208e05612fe4bbbabbf86ab1a3d9d298ab425cf8482c5096f367c54487078a341f4506a5dc652c63d91217d4f6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn4coACgkQcaHudmEf86qVdgCZAWnBnSMd8mpD0IBuHa3Yg0xF
-8eMAnjYUwGJ8tWvpQRwS1VHp+lt379rf
-=xXrO
+iEYEAREIAAYFAlRU7acACgkQso7CE7gHKw2LKACfWqa+YBudVYzRX6a5OrZNLouw
+7ZEAoMRWZUuKVLRoZ16mq33jegTutn9s
+=THb+
 -----END PGP SIGNATURE-----
