@@ -1,15 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=net-firewall/iptables python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=Python bindings for iptables
-EAPI=5
-HOMEPAGE=https://github.com/ldx/python-iptables
-IUSE=python_targets_python2_7
-KEYWORDS=~amd64
-LICENSE=Apache-2.0
-RDEPEND=net-firewall/iptables python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://gentoo/python-iptables-0.3.0_p20130331.tar.xz
-_eclasses_=distutils-r1	90e7008a7d21e3b1597bea444bb85827	eutils	32548a82e42dc26e3312581476d2f20c	multibuild	ddc59d206214ef1c240093e1bb2513cf	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	75e5c82b55dcb208a0a8f4ab8847e731	python-utils-r1	14f70a8c0d896d1b016d17f108a6de74	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=878ec58a4d3767c69dbb7e24aba43ab2
