@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/python-iptables
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iptables/ChangeLog,v 1.9 2014/08/10 21:19:05 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iptables/ChangeLog,v 1.10 2014/11/01 14:26:29 idella4 Exp $
+
+*python-iptables-0.5.0 (01 Nov 2014)
+
+  01 Nov 2014; Ian Delaney <idella4@gentoo.org> +python-iptables-0.5.0.ebuild,
+  -python-iptables-0.3.0-r3.ebuild, -python-iptables-0.3.0_p20130331.ebuild:
+  bump; add py3 support, keyword x86, IUSE doc and all that goes with a doc
+  build, remove edundant patch, tidy, fixes Bug #526276, rm old
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
   python-iptables-0.3.0-r3.ebuild, python-iptables-0.3.0_p20130331.ebuild,
